gerapy/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gerapy
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gerapy
  name: gerapy
  namespace: gerapy
spec:
  ports:
    - name: "7777"
      port: 7777
      targetPort: 8000
  selector:
    app: gerapy
status:
  loadBalancer: {}
---
apiVersion: apps/v1cd
kind: Deployment
metadata:
  labels:
    app: gerapy
  name: gerapy
  namespace: gerapy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gerapy
  revisionHistoryLimit: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: gerapy
    spec:
      containers:
        - image: germey/gerapy:master
          name: gerapy
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "500Mi"
              cpu: "0.2"
            limits:
              memory: "500Mi"
              cpu: "0.2"
          volumeMounts:
            - mountPath: "/app/gerapy"
              name: volume-gerapy
      volumes:
        - name: volume-gerapy
          persistentVolumeClaim:
            claimName: pvc-gerapy
      restartPolicy: Always
status: {}
